feat: Add worktree list